add btcbalance API
