# src/main.rs
@@ -29,11 +29,11 @@ use crate::args::LdkUserInfo;
 use crate::error::AppError;
 use crate::ldk::{start_ldk, stop_ldk};
 use crate::routes::{
-    address, asset_balance, close_channel, connect_peer, create_utxos, decode_ln_invoice,
-    disconnect_peer, invoice_status, issue_asset, keysend, list_assets, list_channels,
-    list_payments, list_peers, list_transactions, list_transfers, list_unspents, ln_invoice,
-    node_info, open_channel, refresh_transfers, rgb_invoice, send_asset, send_onion_message,
-    send_payment, shutdown, sign_message,
+    address, asset_balance, btc_balance, close_channel, connect_peer, create_utxos,
+    decode_ln_invoice, disconnect_peer, invoice_status, issue_asset, keysend, list_assets,
+    list_channels, list_payments, list_peers, list_transactions, list_transfers, list_unspents,
+    ln_invoice, node_info, open_channel, refresh_transfers, rgb_invoice, send_asset,
+    send_onion_message, send_payment, shutdown, sign_message,
 };
 
 #[tokio::main]
@@ -83,6 +83,7 @@ pub(crate) async fn app(
     let router = Router::new()
         .route("/address", post(address))
         .route("/assetbalance", post(asset_balance))
+        .route("/btcbalance", get(btc_balance))
         .route("/closechannel", post(close_channel))
         .route("/connectpeer", post(connect_peer))
         .route("/createutxos", post(create_utxos))
